--- a/ja/index.html
+++ b/ja/index.html
@@ -54,6 +54,7 @@ body {
 - <a href=MATH2.html#kana>こうやくすうさがし</a>（<a href=MATH2.html>公約数さがし</a>）<br>
 - <a href=MATH3.html#kana>ししゃごにゅう</a>（<a href=MATH3.html>四捨五入</a>）<br>
 - <a href=FRACTION.html#kana>ぶんすうのたしざん</a>（<a href=FRACTION.html>分数の足し算</a>）<br>
+- <a href=FRACTION2.html#kana>ぶんすうのかけざん</a>（<a href=FRACTION2.html>分数のかけ算</a>）<br>
 - <a href=FIB.html>フィボナッチすうれつ</a><br>
 </section>
 
