add IchigoJam font

--- a/ja/LED.html
+++ b/ja/LED.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
 <title>ひかりをあやつるLED（エルイーディー） - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
+<link rel="stylesheet" type="text/css" href="ichigojamprint.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
 <h1>ひかりをあやつるLED（エルイーディー）</h1>
 
 <section>
-<img src=key-enter.png height=70 align=right>
+<img src=key-enter.png height=60 align=right>
 IchigoJamのスイッチを入れて、LED1（エル、イー、ディー、いち）とキーボードからうちこんで、Enter（エンター）キーをおしてみよう。
 （Enterキーは、みぎのようなおおきなキー）
-<div id="list1"></div><script>make15("list1", "LED1")</script>
+<!--<div class="ichigojam">LED1</div>-->
+<div id="list2"></div><script>make15("list1", "LED1")</script>
 「OK（オーケー）」とでて、IchigoJamのLEDがひかったら、だいせいこう！
 </section>
 
