--- a/ja/KAWAKUDARI-v2.html
+++ b/ja/KAWAKUDARI-v2.html
@@ -55,16 +55,15 @@ F5キー（＝RUNとおなじいみ）をレンダしてみよう！
 あたりはんていをつけて、ゲームのできあがり！
 <div id="kawakudari-6"></div>
 <script>make15("kawakudari-6", f2s(function() {/*
-40 IF SCR(X,5)=0 GOTO 20
+37 IF SCR(X,5) END
 */}))</script>
-あたっていないときだけ、くりかえし！
 </section>
 
 <section>
 <b>やってみよう！</b><br>
 1. はやさをちょうせいしよう<br>
 2. じぶんのキャラをかえてみよう（ALTおしながらA〜Vをおす）<br>
-3. しょうがいぶつを"***"とふやしてみよう<br>
+3. しょうがいぶつを"**"とふやしてみよう<br>
 4. ゲームのストーリーをかんがえてみよう<br>
 5. うらわざ（＝バグ）をさがそう<br>
 6. バグをつぶすほうほうをかんがえよう<br>
