--- a/ja/index.html
+++ b/ja/index.html
@@ -60,6 +60,7 @@ body {
 
 <section>
 えいご コース<br>
+- <a href=A2Z.html>AからZまで、はやうちゲーム</a><br>
 - <a href=ENGNUM.html>えいごのかずをマスターしよう</a><br>
 </section>
 
