--- a/ja/LED.html
+++ b/ja/LED.html
@@ -11,8 +11,8 @@
 <img src=key-enter.png height=60 align=right>
 IchigoJamのスイッチを入れて、LED1（エル、イー、ディー、いち）とキーボードからうちこんで、Enter（エンター）キーをおしてみよう。
 （Enterキーは、みぎのようなおおきなキー）
-<!--<div class="ichigojam">LED1</div>-->
-<div id="list2"></div><script>make15("list1", "LED1")</script>
+<div class="ichigojam">LED1¥u0013</div>
+<div id="list1"></div><script>make15("list1", "LED1")</script>
 「OK（オーケー）」とでて、IchigoJamのLEDがひかったら、だいせいこう！
 </section>
 
