--- a/ja/index.html
+++ b/ja/index.html
@@ -65,6 +65,11 @@ body {
 </section>
 
 <section>
+こくご コース<br>
+- <a href=ROMAJI.html>ローマじでうつ、カタカナ</a><br>
+</section>
+		
+<section>
 でんしこうさく コース<br>
 - <a href=OUT.html>はじめてのかいろ OUT</a><br>
 - <a href=SIGNAL.html>ほこうしゃしんごうをつくる</a><br>
